--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,11 +1,13 @@
-*{
+
+
+* {
     box-sizing: border-box;
     margin: 0 auto;
     padding: 0 auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-:root{
+:root {
     --dark: #232020;
     --purple: #553739;
     --offwhite: #FFE3DC;
@@ -14,45 +16,53 @@
     --red: #F13030;
 }
 
-header{
-    background-color: var(--green);
-    height: 80px;
+header {
+    background-color: var(--purple);
+    height: 100%;
     text-align: center;
     padding-top: 20px;
 }
 
-h1{
-    font-size: 80px;
+.header-text { 
+    color: var(--light);
+    font-size: 36px;
+    padding: 20px;
 }
 
-main{
+main {
     background-color: var(--dark);
-    height: 650px;
-    padding: 10px;
+    height: 100vh;
+    padding-left: 30px;
+    padding-top: 50px;
 }
 
-h2{
-    color: var(--offwhite);
+h2 {
+    color: var(--offwhite); 
 }
 
-.note{
-    background-color: var(--purple);
+.note {
+    background-color: var(--green);
     height: 400px;
     width: 400px;
-    color: var(--offwhite);
+    color: var(--dark);
     padding: 5px;
+    border-radius: 15px;
+    font-size: large;
 }
 
-.button{
+.button {
     margin: 3px;
 }
 
-#editBtn{
+#editBtn {
     border-radius: 5px;
-    background-color: var(--green);
+    background-color: #5a68bd;
+    margin-left: 15px;
 }
 
-#deleteBtn{
+#deleteBtn {
     border-radius: 5px;
-    background-color: var(--red);
+    background-color: #ec5959;
+    margin-left: 15px
 }
+
